Publish merge-to-github-002
Synced from the internal repositories by
ert-components/scripts/git-utilities/publish_release.sh.